--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -185,7 +185,8 @@
 
                         </li>
                         <li>
-                          <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x wish-added"></i></a>
+                          <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
+                          <a ng-click="addToWishList(item)" ng-if="addedToWishlist == 'true'"><i class="fa fa-heart fa-2x wish-added"></i></a>
                         </li>
                       </ul>
                     </div>
