--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -318,7 +318,7 @@
     <div class="container">
       <!-- START  Product Lift 1 -->
       <div class="col-lg-2 col-md-2 col-sm-6 lift_part">
-        <div class="col-lg-12 col-md-12 col-sm-12 main_box nopadding">
+        <div class="col-lg-12 col-md-12 col-sm-12 main_box nopadding on-hover-pointer">
 
           <div class="lift_pic col-lg-12 col-sm-12 nopadding"><img src="assets/images/engine_powerd_leep.jpg" alt=""></div>
           <div class="lift_name col-lg-12 col-sm-12 nopadding"><a href="#">Engine Powered Boom <br>Lifts</a></div>
@@ -328,7 +328,7 @@
       <!-- End Product Lift 1 -->
       <!-- START  Product Lift 2  -->
       <div class="col-lg-2 col-md-2 col-sm-6 lift_part">
-        <div class="col-lg-12 col-md-12 col-sm-12 main_box nopadding">
+        <div class="col-lg-12 col-md-12 col-sm-12 main_box nopadding on-hover-pointer">
 
           <div class="lift_pic col-lg-12 col-sm-12"><img src="assets/images/electric_hybrid.jpg" alt=""></div>
           <div class="lift_name col-lg-12 col-sm-12 nopadding"><a href="#">Electric & Hybrid Boom<br> Lifts</a></div>
@@ -338,7 +338,7 @@
       <!-- End Product Lift 2 -->
       <!-- START  Product Lift 3 -->
       <div class="col-lg-2 col-md-2 col-sm-6 lift_part">
-        <div class="col-lg-12 col-md-12 col-sm-12 main_box nopadding">
+        <div class="col-lg-12 col-md-12 col-sm-12 main_box nopadding on-hover-pointer">
 
           <div class="lift_pic col-lg-12 col-sm-12 nopadding"><img src="assets/images/vertical_lift.jpg" alt=""></div>
           <div class="lift_name col-lg-12 col-sm-12 nopadding"><a href="#">Vertical Lifts & Stock <br>Pickers</a></div>
@@ -348,7 +348,7 @@
       <!-- End Product Lift 3 -->
       <!-- START  Product Lift 4 -->
       <div class="col-lg-2 col-md-2 col-sm-6 lift_part">
-        <div class="col-lg-12 col-md-12 col-sm-12 main_box nopadding">
+        <div class="col-lg-12 col-md-12 col-sm-12 main_box nopadding on-hover-pointer">
 
           <div class="lift_pic col-lg-12 col-sm-12 nopadding"><img src="assets/images/scissor_lift.jpg" alt=""></div>
           <div class="lift_name col-lg-12 col-sm-12 nopadding"><a href="#">Scissor Lifts</a></div>
@@ -358,7 +358,7 @@
       <!-- End Product Lift 4 -->
       <!-- START  Product Lift 5 -->
       <div class="col-lg-2 col-md-2 col-sm-6 lift_part">
-        <div class="col-lg-12 col-md-12 col-sm-12 main_box nopadding">
+        <div class="col-lg-12 col-md-12 col-sm-12 main_box nopadding on-hover-pointer">
 
           <div class="lift_pic col-lg-12 col-sm-12"><img src="assets/images/towable_boomlft.jpg" alt=""></div>
           <div class="lift_name col-lg-12 col-sm-12 nopadding"><a href="#">Towable Boom Lifts</a></div>
@@ -368,7 +368,7 @@
       <!-- End Product Lift 5 -->
       <!-- START  Product Lift 6 -->
       <div class="col-lg-2 col-md-2 col-sm-6 lift_part">
-        <div class="col-lg-12 col-md-12 col-sm-12 main_box nopadding">
+        <div class="col-lg-12 col-md-12 col-sm-12 main_box nopadding on-hover-pointer">
 
           <div class="lift_pic col-lg-12 col-sm-12"><img src="assets/images/telehendelers.jpg" alt=""></div>
           <div class="lift_name col-lg-12 col-sm-12 nopadding"><a href="#">Telehandlers</a></div>
@@ -432,7 +432,7 @@
     <div class="container">
       <!-- START  Features Product 1 -->
       <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 pay_part">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 easy_main_box">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 easy_main_box  on-hover-pointer">
           <div class="easy_pic col-lg-4 col-md-4 col-sm-4 col-xs-4">
             <a href="#">
               <!--                                    <img src="images/easy_return.png" alt="">-->
@@ -449,7 +449,7 @@
       <!-- End  Features Product 1 -->
       <!-- START  Features Product 2 -->
       <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 pay_part">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 easy_main_box">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 easy_main_box  on-hover-pointer">
           <div class="easy_pic col-lg-4 col-md-4 col-sm-4 col-xs-4">
             <a href="#">
               <span class="glyphicon glyphicon-usd"></span>
@@ -466,7 +466,7 @@
       <!-- End  Features Product 2 -->
       <!-- START  Features Product 3 -->
       <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 pay_part">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 easy_main_box">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 easy_main_box  on-hover-pointer">
           <div class="easy_pic col-lg-4 col-md-4 col-sm-4 col-xs-4">
             <a href="#">
               <span class="glyphicon glyphicon-refresh"></span>
@@ -483,7 +483,7 @@
       <!-- End  Features Product 3 -->
       <!-- START  Features Product 4 -->
       <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 pay_part">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 easy_main_box">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 easy_main_box  on-hover-pointer">
           <div class="easy_pic col-lg-4 col-md-4 col-sm-4 col-xs-4">
             <a href="#">
               <span class="fa fa-money"></span>
@@ -502,7 +502,7 @@
       <!-- End  Features Product 4 -->
       <!-- START  Features Product 5 -->
       <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 pay_part">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 easy_main_box">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 easy_main_box  on-hover-pointer">
           <div class="easy_pic col-lg-4 col-md-4 col-sm-4 col-xs-4">
             <a href="#">
               <span class="glyphicon glyphicon-time"></span>
@@ -519,7 +519,7 @@
       <!-- End  Features Product 5 -->
       <!-- START  Features Product 6 -->
       <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 pay_part">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 easy_main_box">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 easy_main_box  on-hover-pointer">
           <div class="easy_pic col-lg-4 col-md-4 col-sm-4 col-xs-4">
             <a href="#">
               <span class="glyphicon glyphicon-credit-card"></span>
@@ -592,7 +592,7 @@
     <div class="container">
       <div class="row">
         <!-- START About Us -->
-        <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 about_part">
+        <!-- <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 about_part">
           <h4>About Us</h4>
           <p>
             Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus
@@ -601,45 +601,58 @@
             rhoncus felis odio, ut volutpat massa placerat ac. Curabitur
             dapibus iaculis.
           </p>
-          <button type="button" class="btn btn-default sell-equ" ng-click="$state.go('hm.sellEquipment')">Sell Your Equipment</button>
-        </div>
+          <button type="button" class="btn btn-default sell-equ  foot-btn" ng-click="$state.go('hm.sellEquipment')">Sell Your Equipment</button>
+        </div> -->
         <!-- End About Us -->
         <!-- START Company -->
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 about_part">
-          <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 nopadding about_part">
             <h4>Company</h4>
             <div class="comp">
               <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Careers</a></li>
                 <li><a href="#">Team</a></li>
-                <li><a href="#">Become a Vendor</a></li>
+                <li><a href="#">Board of Directors</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Press Releases</a></li>
+                <li><a href="#">Financial Reports</a></li>
+                <li><a href="#">2015 Annual Meeting</a></li>
+                <li><a href="#">Contact Us</a></li>
               </ul>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 nopadding about_part">
             <h4>Contact</h4>
             <div class="cont">
               <ul>
-                <li><a href="#">(000) 000-0000</a></li>
-                <li><a href="#">(000) 000-0000</a></li>
-                <li><a href="#">(000) 000-0000</a></li>
+                <li><a href="#">Equipment Sales and Rental: 1-855-767-4424</a></li>
+                <li><a href="#">Texada Software: 1-800-361-1233</a></li>
+                <li><a href="#">Investor Relations: (832) 767-4424</a></li>
+                <li><a href="#">Email: customercare@nobleiron.com</a></li>
               </ul>
             </div>
           </div>
         </div>
         <!-- End Company -->
         <!-- START Location -->
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 about_part">
+        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 about_part">
           <h4>Location</h4>
           <p>
             Address Line, Address Line 2,<br>
             Address Line 3.<br>
             City, State.
           </p>
-          <button type="button" class="btn btn-default sell-equ">Get Directions</button>
+          <button type="button" class="btn btn-default sell-equ foot-btn">Get Directions</button>
         </div>
         <!-- End Location -->
+        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+          <h4>Newsletter</h4>
+          <p>
+            Get news on our latest promotions, products and services. We'll never share your email address and you can opt out any time
+          </p>
+          <input type="text" placeholder="Enter Your Email Id" class="form-control news-input">
+          <button class="btn btn-default sell-equ foot-btn" style="height: 34px;">Subscribe</button>
+          <!-- <button type="button" class="btn btn-default sell-equ  foot-btn" ng-click="$state.go('hm.sellEquipment')">Sell Your Equipment</button> -->
+        </div>
       </div>
     </div>
   </article>
