--- a/src/app/my-catalogue/my-catalogue.html
+++ b/src/app/my-catalogue/my-catalogue.html
@@ -1,9 +1,9 @@
-<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 display_side nopadding">
+<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 display_side nopadding catalog-div">
   <div class="clearfix">
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit manage_job_tit_small">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-bottm-line manage_job_tit manage_job_tit_small">
       My Catalog
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit manage_job_tit_small">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right my-bottm-line dash_board_tit manage_job_tit_small">
       <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Catalog</span>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
