--- a/src/app/help/help.html
+++ b/src/app/help/help.html
@@ -1,6 +1,6 @@
                 <div class="row no-search-row">
                   <div class="col-md-12 col1" style="padding-top: 23px;">
-                      <p>Let us help you out<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o" style="color: #666666;"></i></a></p>
+                      <p>Let us help you out<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o on-hover-pointer" style="color: #666666;"></i></a></p>
                   </div>
                   <div class="col-md-12 col2">
                     <p>What do you need?</p>
@@ -36,7 +36,7 @@
                     </div>
                   </div>
                   <div class="col-md-12 col1"></div>
-                  <div class="col-md-12 col4" style="padding-bottom: 50px;">
+                  <div class="col-md-12 col4" style="padding-bottom: 16px;">
                     <button class="btn btn-primary pull-right">Request Further Information</button>
                   </div>
                 </div>
