--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -80,8 +80,7 @@
             <!-- START  LOGIN TAB Content -->
             <div id="home" class="tab-pane fade in" ng-class="{'active' : !signUpTab}">
 
-              <div class="col-lg-12 welcome_title">Welcome back!<span class="flot-right need_help"><a href="/#/help">Need
-                Help?</a></span></div>
+              <div class="col-lg-12 welcome_title">Welcome back !<span class="flot-right need_help"><a href="/#/help">Need Help ?</a></span></div>
 
               <div class="col-lg-12">
                 <form role="form" name="loginForm" novalidate valdr-type="User">
@@ -97,8 +96,8 @@
                            class="form-control" placeholder="password" >
                   </div>
                   <div class="checkbox">
-                    <label><input type="checkbox"> Remember me</label>
-                    <span class="flot-right need_help"><a href="/#/forgot-password">Forgot Password?</a></span>
+                    <label class="remem-me"><input type="checkbox"> Remember me</label>
+                    <span class="flot-right need_help"><a href="/#/forgot-password">Forgot Password ?</a></span>
                   </div>
                   <hr>
                   <button type="submit" ng-click="login()" class="btn btn-default flot-right sign_mybtn">
