--- a/src/app/prelogin-header/prelogin-header.html
+++ b/src/app/prelogin-header/prelogin-header.html
@@ -32,8 +32,8 @@
 
                 <a href="/#/help" class="help-link see-your-need-small">Don't see what you need?</a>
                 
-                <a href="/#/login" ng-if="$state.is('hmPrelogin.register') || $state.is('hmPrelogin.forgotPassword')" class="right-links see-your-need-small">Sign in</a>
-                <a href="/#/register" ng-if="$state.is('hmPrelogin.login')" class="right-links see-your-need-small">Register</a>
+                <!-- <a href="/#/login" ng-if="$state.is('hmPrelogin.register') || $state.is('hmPrelogin.forgotPassword')" class="right-links see-your-need-small">Sign in</a>
+                <a href="/#/register" ng-if="$state.is('hmPrelogin.login')" class="right-links see-your-need-small">Register</a> -->
               </form>
             </div>
           </div>
