--- a/src/app/help/help.html
+++ b/src/app/help/help.html
@@ -10,14 +10,14 @@
                     <p>When do you need it?</p>
                   </div>
                   <div class="col-md-6 col2 col3" style="padding-top:0;">
-                    <div class="form-control form-left" style="height: 38px;">
-                      <p class="pull-left">To</p>
+                    <div class="form-control form-left" style="height: 38px; margin-bottom: 10px;">
+                      <p class="pull-left to">To</p>
                       <input type="text" placeholder="dd/mm/yy">
                       <img src="assets/images/calendar.png" class="pull-right">
                     </div>
                   </div>
                   <div class="col-md-6 col2 col3" style="padding-top:0;">
-                    <div class="form-control form-left" style="height: 38px;">
+                    <div class="form-control form-left" style="height: 38px; margin-bottom: 10px;">
                       <p class="pull-left">From</p>
                       <input type="text" placeholder="dd/mm/yy">
                       <img src="assets/images/calendar.png" class="pull-right">
