--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -341,7 +341,7 @@
 
   .no-search-row .form-left .to {
     margin-left: 0px;
-    margin-right: 33px;
+    margin-right: 30px;
   }
 
   .table-top {
@@ -411,6 +411,19 @@
   .catalog-div .lift_box {
     width: 45%;
   }
+
+  .cart_menu .cart_noti {
+    left: 20px;
+  }
+
+  .cart_menu .noti{
+    left: 72px;
+  }
+
+  .sort-by-dropdown {
+    right: 0;
+    left: auto;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -472,7 +485,7 @@
 
     padding: 0 6px;
   }
-  .cart_menu .noti{left: 72px;}
+  .cart_menu .noti{left: 60px;}
   
   .lift_box {
     width: auto;
