forgot password loader

--- a/src/app/forgot-password/forgot-password.html
+++ b/src/app/forgot-password/forgot-password.html
@@ -51,7 +51,10 @@
                          ng-required="true" placeholder="Enter email">
                 </div>
                 <a href="#/login" class="btn btn-default pull-right" style="margin-left: 10px; padding: 8px 10px;">Cancel</a>
-                <button type="submit" ng-click="notifyForgotPassword()" class="btn btn-default sign_mybtn pull-right" style="width: auto;">Submit</button>
+                <button type="submit" ng-click="notifyForgotPassword()" class="btn btn-default sign_mybtn pull-right" style="width: auto; min-width: 148px;">
+                  <span ng-hide="loading">Submit</span>
+                  <i class="fa fa-spinner fa-spin" ng-show="loading" style="font-size: 18px;"></i>
+                </button>
               </form>
             </div>
             <div ng-show="flags.forgotPasswordNotifyInitiated">
